--- a/P04-Dependencias1/alquiler/pom.xml
+++ b/P04-Dependencias1/alquiler/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ppss.P04</groupId>
-    <artifactId>gestorLlamadas</artifactId>
+    <artifactId>alquiler</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -20,8 +20,8 @@
             <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -29,7 +29,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
