Practica 8, ejercicio 2 hecho

--- a/P08-WebDriver/madisonIsland/pom.xml
+++ b/P08-WebDriver/madisonIsland/pom.xml
@@ -19,7 +19,7 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.8.3</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
