Ejercicio 3 de la practica 10 terminado

--- a/p10-Cobertura/matriculacion/pom.xml
+++ b/p10-Cobertura/matriculacion/pom.xml
@@ -55,6 +55,26 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M8</version>
       </plugin>
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.10</version>
+          <executions>
+            <execution>
+                <id>prepare-agent</id>
+                <goals>
+                    <goal>prepare-agent</goal>
+                </goals>
+            </execution>
+            <execution>
+                <id>report-aggregate</id>
+                <phase>verify</phase>
+                <goals>
+                    <goal>report-aggregate</goal>
+                </goals>
+            </execution>
+          </executions>
+        </plugin>
     </plugins>
   </build>
 
