--- a/Repaso/P08-WebDriver/madisonIsland/pom.xml
+++ b/Repaso/P08-WebDriver/madisonIsland/pom.xml
@@ -30,6 +30,12 @@
             <version>4.8.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>4.8.3</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
